实现了新建笔记，动态添加listView的 item

--- a/app/src/main/res/layout/activity_note_list.xml
+++ b/app/src/main/res/layout/activity_note_list.xml
@@ -22,8 +22,7 @@
             android:background="@color/colorPrimary"
             android:text="文件夹"
             android:textColor="@color/colorText"
-            android:textSize="14sp"
-            tools:layout_editor_absoluteY="4dp" />
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/tv_title"
