1、相机 2、相册 3、图文混排及存储

--- a/app/src/main/res/layout/activity_note_new.xml
+++ b/app/src/main/res/layout/activity_note_new.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,11 +7,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.practise.note.NoteListActivity">
+    tools:context="com.practise.note.NoteNew">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:elevation="4dp"
@@ -19,7 +19,7 @@
         app:layout_constraintStart_toStartOf="parent">
         <!--添加Toolbar的子控件-->
         <Button
-            android:id="@+id/btn_folder"
+            android:id="@+id/btn_back"
             android:layout_width="@android:dimen/app_icon_size"
             android:layout_height="@android:dimen/app_icon_size"
             android:layout_gravity="left"
@@ -33,29 +33,23 @@
             android:id="@+id/btn_saveNote"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
             android:layout_gravity="right"
+            android:background="@color/colorPrimary"
             android:text="保存"
             android:textColor="@color/colorText"
             android:textSize="14sp" />
     </android.support.v7.widget.Toolbar>
 
-
-    <LinearLayout
-        android:id="@+id/constraintLayout"
-        android:layout_width="0dp"
+    <EditText
+        android:id="@+id/note_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="点击输入标题" />
+    <ScrollView
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/navigation_main"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_weight="1"
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/note_name"
-            android:hint="点击输入标题" />
 
         <EditText
             android:id="@+id/note_content"
@@ -63,47 +57,61 @@
             android:layout_height="wrap_content"
             android:background="@null"
             android:hint="点击输入笔记" />
-    </LinearLayout>
 
-    <android.support.constraint.ConstraintLayout
+    </ScrollView>
 
-        android:id="@+id/navigation_main"
-        android:layout_width="0dp"
-        android:layout_height="49dp"
+
+    <LinearLayout
+        android:id="@+id/ll"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        android:theme="@style/AppTheme"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/btn_settings"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            android:text="设置"
-            android:textColor="@color/colorText"
-            android:textSize="14sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/btn_newFile"
-            app:layout_constraintStart_toStartOf="parent" />
+        <ImageView
+            android:id="@+id/setting"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:contentDescription="设置"
+            android:src="@drawable/ic_setting" />
 
-        <Button
-            android:id="@+id/btn_newFile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:background="@color/colorPrimary"
-            android:text="新建笔记"
-            android:textColor="@color/colorText"
-            android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-    </android.support.constraint.ConstraintLayout>
-</android.support.constraint.ConstraintLayout>
+        <ImageView
+            android:id="@+id/insert_photo"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_image"
+            android:contentDescription="相册"/>
+
+        <ImageView
+            android:id="@+id/take_photo"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:clickable="false"
+            android:contentDescription="相机"
+            android:src="@drawable/ic_camera" />
+
+        <ImageView
+
+            android:id="@+id/font"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:contentDescription="字体"
+            android:src="@drawable/ic_font" />
+
+        <ImageView
+            android:id="@+id/draw"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:contentDescription="涂鸦"
+            android:src="@drawable/ic_draw" />
+
+    </LinearLayout>
+</LinearLayout>
 
 
 
