--- a/app/src/main/res/layout/activity_note_list.xml
+++ b/app/src/main/res/layout/activity_note_list.xml
@@ -75,7 +75,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent">
-
         <Button
             android:id="@+id/btn_settings"
             android:layout_width="wrap_content"
@@ -86,15 +85,13 @@
             android:textSize="14sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/btn_newFile"
             app:layout_constraintStart_toStartOf="parent" />
-
         <Button
             android:id="@+id/btn_newFile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@android:dimen/app_icon_size"
+            android:layout_height="@android:dimen/app_icon_size"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:background="@color/colorPrimary"
-            android:text="新建笔记"
+            android:background="@drawable/add_note"
             android:textColor="@color/colorText"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
