--- a/app/src/main/res/layout/activity_note_list.xml
+++ b/app/src/main/res/layout/activity_note_list.xml
@@ -18,7 +18,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
         <!--添加Toolbar的子控件-->
-
+        <Button
+            android:id="@+id/btn_setting"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:background="@color/colorPrimary"
+            android:text="设置"
+            android:textColor="@color/colorText"
+            android:textSize="14sp"
+            tools:layout_editor_absoluteY="4dp" />
         <TextView
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
@@ -27,16 +36,14 @@
             android:text="全部笔记"
             android:textColor="@color/colorText"
             android:textSize="20sp" />
-
         <Button
-            android:id="@+id/btn_edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
+            android:id="@+id/btn_newFile"
+            android:layout_width="@android:dimen/app_icon_size"
+            android:layout_height="@android:dimen/app_icon_size"
             android:layout_gravity="right"
-            android:text="编辑"
-            android:textColor="@color/colorText"
-            android:textSize="14sp" />
+            android:background="@drawable/add_note"
+            tools:layout_editor_absoluteY="4dp" />
+
     </android.support.v7.widget.Toolbar>
 
 
@@ -62,13 +69,14 @@
         </ListView>
     </android.support.constraint.ConstraintLayout>
 
-    <android.support.constraint.ConstraintLayout
+    <RelativeLayout
 
         android:id="@+id/navigation_main"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:theme="@style/AppTheme"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -76,25 +84,34 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent">
         <Button
-            android:id="@+id/btn_settings"
+            android:id="@+id/delete_bt"
+            android:text="删除"
+            android:layout_alignParentRight="true"
+            android:background="#00000000"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <Button
+            android:id="@+id/cancel_bt"
+            android:text="取消"
+            android:layout_toLeftOf="@id/delete_bt"
+            android:background="#00000000"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/selected_num"
+            android:layout_marginLeft="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            android:text="设置"
-            android:textColor="@color/colorText"
-            android:textSize="14sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/btn_newFile"
-            app:layout_constraintStart_toStartOf="parent" />
-        <Button
-            android:id="@+id/btn_newFile"
-            android:layout_width="@android:dimen/app_icon_size"
-            android:layout_height="@android:dimen/app_icon_size"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:background="@drawable/add_note"
-            android:textColor="@color/colorText"
-            android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-    </android.support.constraint.ConstraintLayout>
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/select_all_checkbox"/>
+        <CheckBox
+            android:text="全选"
+            android:layout_marginLeft="5dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:id="@+id/select_all_checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
