--- a/app/src/main/res/layout/note_list_item.xml
+++ b/app/src/main/res/layout/note_list_item.xml
@@ -1,28 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/note_name"
+    android:layout_height="wrap_content"
+    android:descendantFocusability="blocksDescendants"
+    android:orientation="horizontal">
+    <!--android:descendantFocusability="blocksDescendants"防止checkbox抢夺焦点，使子项点击失效-->
+
+    >
+
+    <CheckBox
+        android:id="@+id/item_checkbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="false"
+        android:visibility="gone" />
+
+
+    <LinearLayout
+        android:id="@+id/layout_item"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_alignParentLeft="true"
-        android:textSize="30sp" />
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="10dp"
-        android:columnCount="1"
-        android:orientation="horizontal"
-        android:rowCount="1">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
         <TextView
-            android:id="@+id/create_time"
-            android:textSize="15sp"
+            android:id="@+id/note_name"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </GridLayout>
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="10dp"
+            android:textSize="30sp" />
+
+        <TextView
+            android:id="@+id/modify_time"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:textSize="15sp" />
+    </LinearLayout>
+
+
 </LinearLayout>
