--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,13 @@
     <color name="colorPrimaryDark">#341d74</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorText">#000000</color>
+
+    <color name="tp_blue">#03A9F4</color>
+    <color name="tp_black">#000000</color>
+    <color name="transparent">#00000000</color>
+    <color name="tp_red">#ed2e2e</color>
+    <color name="tp_orange">#ed9a2e</color>
+    <color name="tp_green">#42d153</color>
+    <color name="tp_blues">#2da4e8</color>
+    <color name="tp_purple">#d02de8</color>
 </resources>
