--- a/app/src/main/res/layout/activity_note_edit.xml
+++ b/app/src/main/res/layout/activity_note_edit.xml
@@ -30,72 +30,12 @@ tools:context="com.practise.note.NoteEdit">
         android:textSize="14sp" />
 </android.support.v7.widget.Toolbar>
 
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:layout_weight="1"
-    app:layout_constraintTop_toBottomOf="@+id/toolbar">
-
-    <EditText
-        android:id="@+id/note_content"
+    <com.practise.note.view.FuncEditView
+        android:id="@+id/func_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@null"
-        android:padding="10dp"/>
-
-</ScrollView>
-
-
-<LinearLayout
-    android:id="@+id/ll"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/colorPrimary"
-    android:orientation="horizontal">
-
-    <ImageView
-        android:id="@+id/setting"
-        android:layout_width="0dp"
-        android:layout_height="40dp"
-        android:layout_weight="1"
-        android:contentDescription="设置"
-        android:src="@drawable/ic_setting" />
-
-    <ImageView
-        android:id="@+id/insert_photo"
-        android:layout_width="0dp"
-        android:layout_height="40dp"
-        android:layout_weight="1"
-        android:src="@drawable/ic_image"
-        android:contentDescription="相册"/>
-
-    <ImageView
-        android:id="@+id/take_photo"
-        android:layout_width="0dp"
-        android:layout_height="40dp"
-        android:layout_weight="1"
-        android:clickable="false"
-        android:contentDescription="相机"
-        android:src="@drawable/ic_camera" />
-
-    <ImageView
-
-        android:id="@+id/font"
-        android:layout_width="0dp"
-        android:layout_height="40dp"
-        android:layout_weight="1"
-        android:contentDescription="字体"
-        android:src="@drawable/ic_font" />
-
-    <ImageView
-        android:id="@+id/draw"
-        android:layout_width="0dp"
-        android:layout_height="40dp"
-        android:layout_weight="1"
-        android:contentDescription="涂鸦"
-        android:src="@drawable/ic_draw" />
-
-</LinearLayout>
+        android:layout_below="@id/note_name"
+        android:background="@color/colorPrimary"/>
 </LinearLayout>
 
 
