--- a/app/src/main/res/layout/activity_note_show.xml
+++ b/app/src/main/res/layout/activity_note_show.xml
@@ -41,6 +41,7 @@
             android:id="@+id/note_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="20dp"
             android:background="@null"
             android:padding="10dp"/>
 
