--- a/app/src/main/res/layout/activity_note_list.xml
+++ b/app/src/main/res/layout/activity_note_list.xml
@@ -18,6 +18,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
         <!--添加Toolbar的子控件-->
+        <Button
+            android:id="@+id/btn_search"
+            android:layout_width="@android:dimen/app_icon_size"
+            android:layout_height="@android:dimen/app_icon_size"
+            android:layout_gravity="left"
+            android:background="@drawable/search"
+            tools:layout_editor_absoluteY="4dp" />
         <TextView
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
@@ -36,15 +43,60 @@
 
     </android.support.v7.widget.Toolbar>
 
+    <RelativeLayout
 
+        android:id="@+id/navigation_search"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:theme="@style/AppTheme"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@id/constraintLayout"
+        app:layout_constraintTop_toBottomOf="@id/toolbar">
+
+        <EditText
+            android:id="@+id/search_Text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@id/search_ok"
+            android:layout_marginLeft="5dp"
+            android:layout_alignParentLeft="true"
+            android:hint="输入笔记全称"
+            android:maxLines="1"
+            android:padding="10dp"/>
+
+        <Button
+            android:id="@+id/search_ok"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@id/search_Text"
+            android:layout_alignBottom="@id/search_Text"
+            android:text="搜索"
+            android:background="#00000000"
+            android:layout_toLeftOf="@id/search_cancel" />
+
+        <Button
+            android:id="@+id/search_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@id/search_Text"
+            android:layout_alignBottom="@id/search_Text"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:text="取消"
+            android:background="#00000000"
+            app:layout_constraintLeft_toRightOf="@id/search_ok"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </RelativeLayout>
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/navigation_main"
+        app:layout_constraintBottom_toTopOf="@id/navigation_main"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar">
+        app:layout_constraintTop_toBottomOf="@id/navigation_search">
 
         <ListView
             android:id="@+id/list_view"
